remove z-index to fix unclickable links

--- a/web/css/coge.css
+++ b/web/css/coge.css
@@ -99,7 +99,6 @@ div.footer {
 	height: 55px;
 	clear: both;
 	border-top: 1px solid lightgray;
-    z-index: -1;
 }
 
 div.panel {
